@startuml Event Management System - Database Model

skinparam linetype ortho
skinparam roundcorner 10
skinparam class {
  BackgroundColor #FEFEFE
  BorderColor #333333
  ArrowColor #333333
  FontSize 13
}

entity "users" as users {
  * **id** : uuid <<PK>>
  --
  * email : varchar(255) <<UNIQUE>>
  * password : varchar(255)
  * name : varchar(50)
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity "events" as events {
  * **id** : uuid <<PK>>
  --
  * title : varchar(100)
  * description : text
  * date_time : timestamptz
  * location : varchar(200)
  capacity : int <<NULLABLE>>
  * visibility : enum('public','private')
  * organizer_id : uuid <<FK>>
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity "tags" as tags {
  * **id** : uuid <<PK>>
  --
  * name : varchar(50) <<UNIQUE>>
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity "event_participants" as participants {
  * **event_id** : uuid <<PK, FK>>
  * **user_id** : uuid <<PK, FK>>
}

entity "event_tags" as event_tags {
  * **event_id** : uuid <<PK, FK>>
  * **tag_id** : uuid <<PK, FK>>
}

users ||--o{ events : "organizes"
users }o--o{ participants : "joins"
events }o--o{ participants : "has"
events }o--o{ event_tags : "has"
tags }o--o{ event_tags : "tagged"

@enduml
